--- a/nosotros.html
+++ b/nosotros.html
@@ -25,11 +25,20 @@
               <li class="nav-item">
                 <a class="nav-link active NotoSansRegular" href="index.html">Inicio</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link active NotoSansRegular" href="tema.html">Tema</a>
+              <li class="nav-item dropdown">
+                <a class="nav-link NotoSansRegular dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Temas
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item NotoSansRegular" href="./temas/media-queries.html">Media Queries</a></li>
+                  <li><a class="dropdown-item NotoSansRegular" href="./temas/box-model.html">Box Model</a></li>
+                  <li><a class="dropdown-item NotoSansRegular" href="./temas/css-grid.html">CSS Grid</a></li>
+                  <li><a class="dropdown-item NotoSansRegular" href="./temas/selectores-css.html">Selectores CSS</a></li>
+                  <li><a class="dropdown-item NotoSansRegular" href="#">Tema 5</a></li>
+                </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link active NotoSansRegular" href="audio.html">Audio</a>
+                <a class="nav-link active NotoSansRegular" href="audio.html">Audios</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active NotoSansRegular" href="nosotros.html">Nosotros</a>
@@ -56,7 +65,7 @@
                     <li>
                         <a href="audio.html" class="nav-link NotoSansRegular py-3 px-2" title="" data-bs-toggle="tooltip" data-bs-placement="right">
                           <div class="col-lg-3 menu-aside">
-                            <h5 class="text-center">Audio </h5>
+                            <h5 class="text-center">Audios </h5>
                           </div>
                         </a>
                     </li>
@@ -95,24 +104,28 @@
                   <div class="card-body">
                     <div class="row">
                         <div class="col-lg-4">
-                          <img width="400" height="400" src="./assets/images/mi-foto.jpg" class="img-fluid img-nosotros" alt="...">
+                          <img width="400" height="400" src="./assets/images/mi-foto.jpg" class="img-fluid img-nosotros" alt="Daniel Perez Arango">
                           <p></p>
                           <h4 class="NotoSansSemiBold text-center" style="color: #181C31;"> Daniel Pérez Arango</h4>
                           <p class="NotoSansRegular text-center" style="color: #9297A0;"> dperezara@unadvirtual.edu.co</p>
                         </div>
+
                         <div class="col-lg-4">
-                          <img width="400" height="400" src="./assets/images/no-encontrado.jpeg" class="img-fluid img-nosotros" alt="...">
+                          <img width="400" height="400" src="./assets/images/marlon.jpeg" class="img-fluid img-nosotros" alt="Marlon Gamboa Leudo">
                           <p></p>
-                          <h4 class="NotoSansSemiBold text-center" style="color: #181C31;"> Nombre 1</h4>
+                          <h4 class="NotoSansSemiBold text-center" style="color: #181C31;"> Marlon Gamboa Leudo</h4>
                           <p class="NotoSansRegular text-center" style="color: #9297A0;"> correo 1</p>
                         </div>
+
                         <div class="col-lg-4">
-                          <img width="400" height="400" src="./assets/images/no-encontrado.jpeg" class="img-fluid img-nosotros" alt="...">
+                          <img width="400" height="400" src="./assets/images/julian.jpg" class="img-fluid img-nosotros" alt="Julián Alberto Ruiz Piedrahíta">
                           <p></p>
-                          <h4 class="NotoSansSemiBold text-center" style="color: #181C31;"> Nombre 2</h4>
+                          <h4 class="NotoSansSemiBold text-center" style="color: #181C31;"> Julián Alberto Ruiz Piedrahíta</h4>
                           <p class="NotoSansRegular text-center" style="color: #9297A0;"> correo 2</p>
                         </div>
+
                       </div>
+
                       <br>
                       <div class="progress">
                         <div class="progress-bar" role="progressbar" aria-label="Basic example" style="width: 50%; background-color: #7083F5;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
@@ -120,9 +133,9 @@
                       <br>
                       <div class="row">
                         <div class="col-lg-4">
-                          <img width="400" height="400" src="./assets/images/no-encontrado.jpeg" class="img-fluid img-nosotros" alt="...">
+                          <img width="400" height="400" src="./assets/images/GUEYNEN.jpg" class="img-fluid img-nosotros" alt="Gueynen Jhoan Mestra Flórez">
                           <p></p>
-                          <h4 class="NotoSansSemiBold text-center" style="color: #181C31;"> Nombre 3</h4>
+                          <h4 class="NotoSansSemiBold text-center" style="color: #181C31;"> Gueynen Jhoan Mestra Flórez</h4>
                           <p class="NotoSansRegular text-center" style="color: #9297A0;"> correo 3</p>
                         </div>
                         <div class="col-lg-4">
@@ -145,7 +158,16 @@
     </div>
     <footer class="bg-color-footer" style="padding-top: 30px; padding-bottom: 20px; width:100%; bottom: 0px;">
       <section class="footer">
-          <p class=" text-center"> &copy; Copyright - Daniel Pérez Arango - 24 de marzo del 2023</p>
+          <p class=" text-center"> 
+            &copy; Copyright - 
+            Daniel Pérez Arango -
+            Marlon Gamboa Leudo -  
+            Julián Alberto Ruiz Piedrahíta -
+            Gueynen Jhoan Mestra Flórez
+          </p>
+          <p class=" text-center"> 
+            7 de abril del 2023
+          </p>
       </section>
     </footer>
    
