--- a/nosotros.html
+++ b/nosotros.html
@@ -114,7 +114,7 @@
                           <img width="400" height="400" src="./assets/images/marlon.jpeg" class="img-fluid img-nosotros" alt="Marlon Gamboa Leudo">
                           <p></p>
                           <h4 class="NotoSansSemiBold text-center" style="color: #181C31;"> Marlon Gamboa Leudo</h4>
-                          <p class="NotoSansRegular text-center" style="color: #9297A0;"> correo 1</p>
+                          <p class="NotoSansRegular text-center" style="color: #9297A0;"> marlonxx26@gmail.com</p>
                         </div>
 
                         <div class="col-lg-4">
