--- a/nosotros.html
+++ b/nosotros.html
@@ -121,7 +121,7 @@
                           <img width="400" height="400" src="./assets/images/julian.jpg" class="img-fluid img-nosotros" alt="Julián Alberto Ruiz Piedrahíta">
                           <p></p>
                           <h4 class="NotoSansSemiBold text-center" style="color: #181C31;"> Julián Alberto Ruiz Piedrahíta</h4>
-                          <p class="NotoSansRegular text-center" style="color: #9297A0;"> correo 2</p>
+                          <p class="NotoSansRegular text-center" style="color: #9297A0;"> jaruizpi@unadvirtual.edu.co</p>
                         </div>
 
                       </div>
@@ -136,14 +136,14 @@
                           <img width="400" height="400" src="./assets/images/GUEYNEN.jpg" class="img-fluid img-nosotros" alt="Gueynen Jhoan Mestra Flórez">
                           <p></p>
                           <h4 class="NotoSansSemiBold text-center" style="color: #181C31;"> Gueynen Jhoan Mestra Flórez</h4>
-                          <p class="NotoSansRegular text-center" style="color: #9297A0;"> correo 3</p>
+                          <p class="NotoSansRegular text-center" style="color: #9297A0;"> shemesh.ro@gmail.com</p>
                         </div>
-                        <div class="col-lg-4">
+                        <!-- <div class="col-lg-4">
                           <img width="400" height="400" src="./assets/images/no-encontrado.jpeg" class="img-fluid img-nosotros" alt="...">
                           <p></p>
                           <h4 class="NotoSansSemiBold text-center" style="color: #181C31;"> Nombre 4</h4>
                           <p class="NotoSansRegular text-center" style="color: #9297A0;"> correo 4</p>
-                        </div>
+                        </div> -->
                       </div>
                   </div>
                 </div>
